instructions.InstructionsDrawG.scala.error
Erreur de compilation :
InstructionsDrawG:1: error: not found: value blue
setCouleurBrosse(blue)
                 ^InstructionsDrawG:15: error: not found: value doite
doite()
^